# PNLTrackerDiscord

./: .env.example  .gitignore  README.md  discordraw.txt  docker-compose.yml  out.json  out_analyze.json  out_analyze_final.json  out_analyze_new.json  out_analyze_new2.json  out_analyze_new3.json  out_analyze_new4.json  out_analyze_split.json  out_analyze_split2.json  out_analyze_split3.json  out_analyze_split4.json  out_run_analyze.json  out_run_analyze2.json  pyproject.toml
src/pnl_analyzer/: config.py  logging_setup.py  main.py
src/pnl_analyzer/api/: routes_analyze.py
src/pnl_analyzer/db/: models.py  persist.py  queries.py  session.py
src/pnl_analyzer/extraction/: candidates.py  signals.py
src/pnl_analyzer/llm/: base.py  factory.py  mock_extractor.py  normalize.py  openai_extractor.py  openrouter_extractor.py  prompt.py  types.py
src/pnl_analyzer/markets/: base.py  factory.py  kalshi.py  polymarket.py
src/pnl_analyzer/metrics/: run_metrics.py
src/pnl_analyzer/parsing/: discord_txt.py
src/pnl_analyzer/pnl/: engine.py
src/pnl_analyzer/prices/: cache.py
src/pnl_analyzer/uploads/: store.py
src/pnl_analyzer/utils/: json_sanitize.py  retry.py  stages.py  text.py  time.py
tests/: test_discord_parser.py  test_extraction_pipeline.py  test_market_resolution_and_pricing.py  test_pnl_engine.py  test_size_extraction.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/api/: client.ts  types.ts
ui/src/components/: Dropzone.tsx  Layout.tsx  Ui.tsx  dropzone.css  layout.css  ui.css
(+3 files in other folders)
